# seminar-bankruptcy-prediction

./: .gitignore  00_ALL_CORRECTIONS_APPLIED.md  00_FOUNDATION_COMPLETE_SUMMARY.md  AUDIT_FIXES_COMPLETE.md  AUDIT_FIX_SUMMARY.md  COMPLETE_PIPELINE_ANALYSIS.md  DATA_STRUCTURE_EXPLAINED.md  GPT5_FINAL_FIX_COMPLETE.md  Makefile  PERFECT_PROJECT_ROADMAP.md  PHASE_01_HANDOVER_PROMPT.md  PHASE_02_COMPLETE_SUMMARY.md  PHASE_02_UPGRADE_A+_COMPLETE.md  PHASE_03_AUDIT_RESPONSE.md  PHASE_03_VIF_COMPLETE.md  README.md  SEMINAR_PAPER_PHASE03_COMPLETE.md  check_outliers.py  pyproject.toml  verify_foundation.py  verify_temporal_calculations.py
.windsurf/rules/: always-based-on-factsd-and-robust-calculations.md  anti-laziness-core-principles.md  be-honest-direct-critical.md  keep-in-mind-seminar-paper.md  keep-seminar-paper-in-mind.md  make-sure-it-works.md  never-run-scripts-with-cat-eof.md  no-extra-docs-maitain-core-only.md  no-half-knowledge.md  no-terminal-oneline-scripts.md  (+2 more)
archive/: original_project_prompt.txt
config/: project_config.yaml
docs/: 00_FOUNDATION_CRITICAL_FINDINGS.md  PHASE_03_VIF_PROMPT.md  PROJECT_STATUS.md
econometrics-materials/: 00Einfuehrung_extracted.txt  01EinfachesLineareModell_EXTRACTED.txt  02VerallgemeinertesLinearesModell_EXTRACTED.txt  03AllgemeineDynamischeModelle_EXTRACTED.txt
sandbox_checks/: check_phase02c_counts.py  check_vif_recompute.py  vif_recompute_ALL_report.json  vif_recompute_H1_report.json
scripts/: REFACTOR_02c_CORRELATION.py
seminar-paper/: README_SEMINAR_PAPER.md  doku_main.tex  sources.bib
src/: __init__.py
(+423 files in other folders)
